[gd_scene load_steps=3 format=3 uid="uid://b4riiqau7xnd8"]

[ext_resource type="Theme" uid="uid://dmo61tdv4i0ng" path="res://Theme/Main Menu Theme.tres" id="1_hxhli"]
[ext_resource type="Script" path="res://Scripts/Main_Menu.tres.gd" id="2_22tng"]

[node name="Main Menu" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hxhli")
script = ExtResource("2_22tng")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0862745, 0.113725, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "ISLAND HOPPER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button container" type="VBoxContainer" parent="MarginContainer/Menu"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MarginContainer/Menu/Button container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Game"

[node name="OptionsGameButton" type="Button" parent="MarginContainer/Menu/Button container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options
"

[node name="QuitGameButton" type="Button" parent="MarginContainer/Menu/Button container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit
"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Video" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Backfromoptions" type="Button" parent="Options/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "BACK"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Video/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Labels" type="VBoxContainer" parent="Video/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Fullscreen" type="Label" parent="Video/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Fullscreen"

[node name="VSync" type="Label" parent="Video/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "vsync"

[node name="Checks" type="VBoxContainer" parent="Video/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Fullscreen Check" type="CheckBox" parent="Video/MarginContainer/HBoxContainer/Checks"]
layout_mode = 2
text = "FUllscreen"
clip_text = true
vertical_icon_alignment = 2

[node name="VSync Check" type="CheckBox" parent="Video/MarginContainer/HBoxContainer/Checks"]
layout_mode = 2
text = "Vsync"
clip_text = true
vertical_icon_alignment = 2

[node name="Backfromvideo" type="Button" parent="Video/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "BACK"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Audio/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Labels" type="VBoxContainer" parent="Audio/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Master" type="Label" parent="Audio/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="Audio/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music
"

[node name="Sound FX" type="Label" parent="Audio/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "sound FX
"

[node name="Sliders" type="VBoxContainer" parent="Audio/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Master" type="HSlider" parent="Audio/MarginContainer/HBoxContainer/Sliders"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio/MarginContainer/HBoxContainer/Sliders"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="Audio/MarginContainer/HBoxContainer/Sliders"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Backfromaudio" type="Button" parent="Audio/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "BACK"

[connection signal="pressed" from="MarginContainer/Menu/Button container/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/Button container/OptionsGameButton" to="." method="_on_options_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/Button container/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/MarginContainer/Backfromoptions" to="." method="_on_backfromoptions_pressed"]
[connection signal="toggled" from="Video/MarginContainer/HBoxContainer/Checks/Fullscreen Check" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="Video/MarginContainer/HBoxContainer/Checks/VSync Check" to="." method="_on_v_sync_check_toggled"]
[connection signal="pressed" from="Video/MarginContainer/Backfromvideo" to="." method="_on_backfromvideo_pressed"]
[connection signal="value_changed" from="Audio/MarginContainer/HBoxContainer/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/HBoxContainer/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/HBoxContainer/Sliders/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/MarginContainer/Backfromaudio" to="." method="_on_backfromaudio_pressed"]
